# comfyui-comic-creator

./: .gitattributes  .gitignore  DEVLOG.md  LICENSE  PLAN_backlog.md  PLAN_polygon_pen_tool.md  README.md  README_en.md  README_zh.md  __init__.py  pyproject.toml
.github/workflows/: publish_action.yml
assets/image/: close-test-01.json  new-canvas.json  new-canvas1.json  new-canvas2.json  new-canvas3.json  new-canvas4.json  new-canvas6.json
py/: ccc.py  config.py
static/css/: comfyui.css  image-tab.css  style.css
static/js/: i18n.js  image-tab.js  nanobanana.js  pixifx.js  pose3d.js  text-style-modal.js
static/js/image-tab/: DrawTool.js  FillTool.js  LayerManager.js  MaskEditorOneTools.js  MaskTool.js  SelectTool.js  ShapeTool.js  TextTool.js
static/js/main/: 00-db.js  01-state.js  02-assets.js  03-layers-panel.js  04a-mask-core.js  04b-layer-panel-render.js  05-groups-move.js  06a-polygon-geometry.js  06b-template-manager.js  06c-template-wizard.js  07-pages.js  08-panels-images.js  09a-balloon-init.js  09b-balloon-shapes.js  09c-balloon-handles.js  09d-balloon-tools.js  09e-text-tool.js  09f-bubble-text.js  10-output-pages.js  11a-work-manager.js  11b-page-manager-tab.js  12-text-png-export.js  13-export-pdf-epub.js  13a-export-metadata.js  14-integrations.js  15-pixifx-bridge.js  15b-manga-tone.js  15c-manga-bgpattern.js  16-processing-edit-tabs.js  17a-layer-draw-input.js  17b-layer-draw-commit.js  17c-layer-draw-handles.js  18-svg-color-png.js  19-font-manager.js  20-font-presets.js  21-script-tab.js  (+2 more)
templates/: index.html
web/comfyui/: ccc_menu.js
